[package]
name = "simple-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.23", default-features = false, features = ["std"] }
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_yaml = "0.9.10"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
trust-dns-proto = { version = "0.21.2", features = ["tokio-rustls"] }
trust-dns-resolver = { version = "0.21.2", features = ["tokio-rustls"] }
trust-dns-server = { version = "0.21.2", features = ["tokio-rustls", "trust-dns-resolver"] }

[dev-dependencies]
anyhow = "1.0.62"
