[package]
name = "simple-dns-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/simple-dns-server"
repository = "https://github.com/tyrchen/simple-dns"
homepage = "https://github.com/tyrchen/simple-dns"
description = """
Simple DNS server for easy integration.
"""
readme = "README.md"
keywords = ["dns"]
categories = ["development-tools", "network-programming"]


[dependencies]
futures = { version = "0.3.23", default-features = false, features = ["std"] }
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_yaml = "0.9.10"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["net"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
trust-dns-proto = { version = "0.21.2", features = ["tokio-rustls"] }
trust-dns-resolver = { version = "0.21.2", features = ["tokio-rustls"] }
trust-dns-server = { version = "0.21.2", features = ["tokio-rustls", "trust-dns-resolver"] }

[dev-dependencies]
anyhow = "1.0.62"
tokio = { version = "1.20.1", features = ["macros"] }
